# swd

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  config.cc  config.hh  hash-cache.cc  hash-cache.hh  hash-cache_impl.cc  hash-cache_impl.hh  hash-tools.cc  hash-tools.hh  main.cc  master.cc  master.hh  scan.cc  scan.hh  script-syntax.cc  script-syntax.hh  script-tools.cc  script-tools.hh  script-travelers.cc  script-travelers.hh  script.cc  script.hh
src/utils/: ansi.cc  ansi.hh  exec.cc  exec.hh  flags.hh  path.cc  path.hh  stream.cc  stream.hh  string.cc  string.hh
test/: .gitignore  .swd.conf
test/include/: tr_exec.sh  tr_src_wget.ish
test/scripts/: 01-script1.swd  01-zlib.swd  group.swd
test/scripts/02-test/: 01-test.swd
